# Cloudmortem

./: -files  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/adr/: ADR-001-terraform-iac.md  ADR-002-github-oidc.md  ADR-003-plan-apply-separation.md  ADR-004-immutable-artifacts.md  ADR-005-security-scanning-strategy.md  ADR-006-deployment-concurrency-protection.md  README.md
scripts/: check.ps1
src/cloudmortem/: __init__.py  cli.py  command_registry.py  commands.py  formatter.py  logger.py  logging_config.py  models.py  service.py
src/cloudmortem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
terraform/bootstrap/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  variables.tf  version.tf
terraform/infrastructure/: .terraform.lock.hcl  backend.tf  cloudwatch.tf  eventbridge.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  snapshots.tf  variables.tf
tests/: test_diff.py
tests/cloudmortem/: test_analysis_service.py  test_application_workflow.py  test_aws_discovery_provider.py  test_aws_inventory_workflow.py  test_aws_resource_mapper.py  test_ec2_discovery.py  test_file_storage.py  test_inventory_service.py  test_lambda_discovery.py  test_memory_storage.py  test_reporting_service.py  test_s3_discovery.py  test_s3_storage.py
tests/integration/: test_main.py
tests/platformiq/: test_discovery_contract.py  test_identifiers.py  test_provider_error.py  test_reporter_contract.py  test_resource.py  test_resource_state.py  test_snapshot.py  test_snapshot_differ.py  test_snapshot_serializer.py  (+1 more)
(+47 files in other folders)
