[project]
name = "cloudmortem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "'Ganesh'", email = "'ganesh.v.m.blr@gmail.com'" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cloudmortem = "cloudmortem:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
