[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmortem"
version = "0.1.0"
description = "CloudMortem - Service execution simulator CLI"
authors = [{ name = "CloudMortem Team" }]
requires-python = ">=3.13"

dependencies = []

[project.scripts]
cloudmortem = "cloudmortem.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
[project.optional-dependencies]
build = [
    "build",
    "twine"
]